--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,20 +80,20 @@ jobs:
     - name: Test Docker image with Nginx
       run: |
         # Test the nginx setup
-        docker-compose -f docker-compose.prod.yml build
-        docker-compose -f docker-compose.prod.yml up -d
+        docker compose -f docker-compose.prod.yml build
+        docker compose -f docker-compose.prod.yml up -d
         
         # Wait for services to start
         sleep 20
         
         # Test health endpoint through Nginx (port 80)
-        curl -f http://localhost/health || (docker-compose -f docker-compose.prod.yml logs && exit 1)
+        curl -f http://localhost/health || (docker compose -f docker-compose.prod.yml logs && exit 1)
         
         # Test API docs endpoint
         curl -f http://localhost/docs || echo "Docs endpoint test failed"
         
         # Clean up
-        docker-compose -f docker-compose.prod.yml down
+        docker compose -f docker-compose.prod.yml down
         
   deploy:
     needs: [test, build]
@@ -157,14 +157,14 @@ jobs:
         git pull origin main
         
         # Stop existing containers gracefully
-        docker-compose -f docker-compose.prod.yml down --timeout 30 || true
+        docker compose -f docker-compose.prod.yml down --timeout 30 || true
         
         # Remove old images to free space
         docker image prune -f || true
         
         # Build and start new containers with Nginx
-        docker-compose -f docker-compose.prod.yml build --no-cache
-        docker-compose -f docker-compose.prod.yml up -d
+        docker compose -f docker-compose.prod.yml build --no-cache
+        docker compose -f docker-compose.prod.yml up -d
         
         # Wait for services to be healthy
         sleep 45
@@ -202,7 +202,7 @@ jobs:
         else
           echo "❌ Deployment verification failed after 5 attempts!"
           echo "Container logs:"
-          docker-compose -f docker-compose.prod.yml logs --tail=50
+          docker compose -f docker-compose.prod.yml logs --tail=50
           exit 1
         fi
         DEPLOY_EOF
