--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,8 @@ on:
 env:
   PYTHON_VERSION: '3.11'
   POETRY_VERSION: '1.8.0'
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
   test:
@@ -62,9 +64,12 @@ jobs:
           pytest-report.xml
         retention-days: 30
         
-  build:
+  build-and-push:
     needs: test
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
     
     steps:
     - name: Checkout code
@@ -73,30 +78,82 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
       
-    - name: Build Docker image
-      run: |
-        docker build -t binance-endpoints:latest .
+    - name: Log in to GitHub Container Registry
+      uses: docker/login-action@v3
+      with:
+        registry: ${{ env.REGISTRY }}
+        username: ${{ secrets.GHCR_USERNAME }}
+        password: ${{ secrets.GHCR_TOKEN }}
+    
+    - name: Extract metadata
+      id: meta
+      uses: docker/metadata-action@v5
+      with:
+        images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+        tags: |
+          type=ref,event=branch
+          type=ref,event=pr
+          type=sha,prefix={{branch}}-
+          type=raw,value=latest,enable={{is_default_branch}}
         
-    - name: Test Docker image with Nginx
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        target: production
+        push: true
+        tags: ${{ steps.meta.outputs.tags }}
+        labels: ${{ steps.meta.outputs.labels }}
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
+        
+    - name: Test Docker image with local docker-compose
       run: |
-        # Test the nginx setup
-        docker compose -f docker-compose.prod.yml build
-        docker compose -f docker-compose.prod.yml up -d
+        # Create temporary docker-compose for testing with the pushed image
+        cat > docker-compose.test.yml << 'EOF'
+        version: '3.8'
+        services:
+          nginx:
+            image: nginx:alpine
+            ports:
+              - "80:80"
+            volumes:
+              - ./nginx.conf:/etc/nginx/conf.d/default.conf
+            depends_on:
+              app:
+                condition: service_healthy
+          app:
+            image: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
+            expose:
+              - "8000"
+            environment:
+              - PYTHONPATH=/app
+            healthcheck:
+              test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+              interval: 30s
+              timeout: 10s
+              retries: 3
+              start_period: 10s
+        EOF
+        
+        # Test the complete setup with the pushed image
+        docker compose -f docker-compose.test.yml up -d
         
         # Wait for services to start
-        sleep 20
+        sleep 30
         
         # Test health endpoint through Nginx (port 80)
-        curl -f http://localhost/health || (docker compose -f docker-compose.prod.yml logs && exit 1)
+        curl -f http://localhost/health || (docker compose -f docker-compose.test.yml logs && exit 1)
         
         # Test API docs endpoint
         curl -f http://localhost/docs || echo "Docs endpoint test failed"
         
         # Clean up
-        docker compose -f docker-compose.prod.yml down
+        docker compose -f docker-compose.test.yml down
+        rm docker-compose.test.yml
         
   deploy:
-    needs: [test, build]
+    needs: [test, build-and-push]
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     runs-on: ubuntu-latest
     environment: production
@@ -143,9 +200,9 @@ jobs:
         # Verify SSH key format
         ssh-keygen -l -f ~/.ssh/id_rsa
         
-    - name: Deploy to EC2
+    - name: Deploy to EC2 with GHCR
       run: |
-        # Create deployment script
+        # Create deployment script that uses GHCR
         cat > deploy_script.sh << 'DEPLOY_EOF'
         #!/bin/bash
         set -e
@@ -153,17 +210,22 @@ jobs:
         # Navigate to application directory
         cd ${{ secrets.EC2_APP_PATH }}
         
-        # Pull latest changes
+        # Pull latest changes to get updated docker-compose files
         git pull origin main
+        
+        # Login to GHCR
+        echo "${{ secrets.GHCR_TOKEN }}" | docker login ghcr.io -u "${{ secrets.GHCR_USERNAME }}" --password-stdin
+        
+        # Pull the latest image from GHCR
+        docker pull ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
         
         # Stop existing containers gracefully
         docker compose -f docker-compose.prod.yml down --timeout 30 || true
         
-        # Remove old images to free space
+        # Remove old images to free space (but keep the latest GHCR image)
         docker image prune -f || true
         
-        # Build and start new containers with Nginx
-        docker compose -f docker-compose.prod.yml build --no-cache
+        # Start new containers using GHCR image
         docker compose -f docker-compose.prod.yml up -d
         
         # Wait for services to be healthy
@@ -188,7 +250,8 @@ jobs:
             fi
             
             echo ""
-            echo "✅ Deployment completed successfully!"
+            echo "✅ Deployment completed successfully using GHCR image!"
+            echo "📦 Using image: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest"
             SUCCESS=true
             break
           fi
@@ -197,7 +260,7 @@ jobs:
         done
         
         if [ "$SUCCESS" = true ]; then
-          echo "🎉 Binance Endpoints API is running successfully!"
+          echo "🎉 Binance Endpoints API is running successfully from GHCR!"
           exit 0
         else
           echo "❌ Deployment verification failed after 5 attempts!"
@@ -234,6 +297,7 @@ jobs:
           echo "✅ Binance Endpoints deployment to EC2 completed successfully"
           echo "🌐 API available at: http://${{ secrets.EC2_HOST }}"
           echo "📖 API Documentation: http://${{ secrets.EC2_HOST }}/docs"
+          echo "📦 Container Registry: https://github.com/${{ github.repository }}/pkgs/container/binance-endpoints"
         else
           echo "❌ Binance Endpoints deployment to EC2 failed"
         fi 
