--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,6 +70,9 @@ jobs:
     permissions:
       contents: read
       packages: write
+    outputs:
+      image-digest: ${{ steps.build.outputs.digest }}
+      image-tags: ${{ steps.meta.outputs.tags }}
     
     steps:
     - name: Checkout code
@@ -82,8 +85,8 @@ jobs:
       uses: docker/login-action@v3
       with:
         registry: ${{ env.REGISTRY }}
-        username: ${{ secrets.GHCR_USERNAME }}
-        password: ${{ secrets.GHCR_TOKEN }}
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
     
     - name: Extract metadata
       id: meta
@@ -97,6 +100,7 @@ jobs:
           type=raw,value=latest,enable={{is_default_branch}}
         
     - name: Build and push Docker image
+      id: build
       uses: docker/build-push-action@v5
       with:
         context: .
@@ -109,8 +113,17 @@ jobs:
         
     - name: Test Docker image with local docker-compose
       run: |
+        # Use the latest tag for testing (most reliable)
+        if [[ "${{ github.ref }}" == "refs/heads/main" ]]; then
+          TEST_TAG="latest"
+        else
+          TEST_TAG="${{ github.ref_name }}"
+        fi
+        
+        echo "Testing with image: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${TEST_TAG}"
+        
         # Create temporary docker-compose for testing with the pushed image
-        cat > docker-compose.test.yml << 'EOF'
+        cat > docker-compose.test.yml << EOF
         services:
           nginx:
             image: nginx:alpine
@@ -122,7 +135,7 @@ jobs:
               app:
                 condition: service_healthy
           app:
-            image: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.ref_name }}-${{ github.sha }}
+            image: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${TEST_TAG}
             expose:
               - "8000"
             environment:
@@ -134,6 +147,12 @@ jobs:
               retries: 3
               start_period: 10s
         EOF
+        
+        # Wait a moment for the image to be fully available
+        sleep 10
+        
+        # Pull the image first to verify it exists
+        docker pull ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${TEST_TAG}
         
         # Test the complete setup with the pushed image
         docker compose -f docker-compose.test.yml up -d
@@ -212,8 +231,8 @@ jobs:
         # Pull latest changes to get updated docker-compose files
         git pull origin main
         
-        # Login to GHCR
-        echo "${{ secrets.GHCR_TOKEN }}" | docker login ghcr.io -u "${{ secrets.GHCR_USERNAME }}" --password-stdin
+        # Login to GHCR using GITHUB_TOKEN (passed from deployment)
+        echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
         
         # Pull the latest image from GHCR
         docker pull ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
