--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,12 @@ uvicorn = "^0.34.2"
 pytest = "^8.3.5"
 requests = "^2.32.3"
 binance-connector = "^3.12.0"
+pandas = "^2.2.3"
+matplotlib = "^3.10.3"
+seaborn = "^0.13.2"
+numpy = "^2.2.6"
+plotly-express = "^0.4.1"
+pillow = "^11.2.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest-asyncio = "^1.0.0"
