--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ seaborn = "^0.13.2"
 numpy = "^2.2.6"
 plotly-express = "^0.4.1"
 pillow = "^11.2.1"
+jinja2 = "^3.1.6"
+lxml = "^5.4.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest-asyncio = "^1.0.0"
